# comfy-modelopt

./: .gitignore  CLAUDE.md  LICENSE  README.md  RESEARCH_NOTES.md  __init__.py  pyproject.toml  requirements-linux.txt  requirements-windows.txt  requirements.txt
docs/: TECHNICAL_GUIDE.md
examples/: README.md
nodes/: __init__.py  loader.py  native_quant.py  quant_saveload.py  quantizer.py  utils.py
tests/: test_quant_roundtrip_standalone.py
